Lab 1 : update README.md