@@ -1,15 +1,15 @@
 # Lab 1
 
 ## Author
-***
+
 **Mozol Vlad**
 
 ## Group
-***
+
 **IA-23**
 
 ## Description
-***
+
 This project simulates a collection of mythical creatures, each having attributes such as name, type, first mention date, and attack power. The main tasks include filtering, grouping, and analyzing these creatures. The creatures are categorized by types such as UPYR, MAVKA, DOMOVYK, and others, and various operations are performed to gather, analyze, and display statistics about them.
 
 Key Features:
@@ -18,7 +18,7 @@ Key Features:
 - Uses streams and collectors to process and analyze data.
 
 ## Project Structure
-***
+
 The project consists of the following main components:
 - **Model Classes**: Define the structure for mythical creatures and attack statistics.
 - **Utility Classes**: Provide functionality for generating creatures, collecting statistics, and filtering based on specific criteria.
@@ -30,7 +30,7 @@ The project consists of the following main components:
 - Maven (or any build tool of your choice)
 
 ## How to Build and Run
-***
+
 ### Step 1: Clone the repository
 Clone the repository to your local machine:
 ```bash
@@ -44,12 +44,24 @@ Navigate to the project directory and run the following command to compile the p
 mvn clean install
 ```
 
-### Step 3: Run the project
+### Step 3: Building Project
+
+Compile project with maven
+```bash
+mvn compile
+```
+
+### Step 4: Run the project
 
 You can run the project using the following command:
 
+1. Compile Java files using:
 ```bash
-mvn exec:java -Dexec.mainClass="com.project.Main"
+javac --enable-preview --release 23 -Xlint:preview -d bin src/main/java/com/project/Main.java src/main/java/com/project/common/*.java src/main/java/com/project/model/*.java src/main/java/com/project/task/*.java src/main/java/com/project/util/*.java 
+```
+2. Run the application
+```bash
+java --enable-preview -cp bin com.project.Main
 ```
 This will start the program and perform the tasks defined in the Main class.
 
